<resources>
    <string name="app_name">Enseñanza chat</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="success">Success</string>
    <string name="user_added">User Added</string>
    <string name="fail">Fail</string>
    <string name="ok">Ok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="roomAdded">Room Added</string>
    <string name="title_activity_chat_thread">ChatThread</string>
    <string name="type_your_message_here">Type Your Message Here</string>
    <string name="try_again">Try Again Later</string>
    <string name="Email_or_password_is_wrong">E-mail or Password is Wrong</string>
    <string name="required">Required</string>
    <string name="min_6_chars">Password Length Should Be 6 Chars</string>
    <string name="not_valid">Not Valid</string>
    <string name="email_registered_before">Email is registered before</string>
    <string name="error">Error</string>
    <string name="email_or_password_not_valid">Email or password not valid</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="do_you_have_account">Do You Have Account?</string>
    <string name="user_name">User Name</string>
    <string name="room_name">Room Name</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
</resources>
